didnt_work/istio-virtualservice-9898.yaml
---
# This virtual service is for handling A/B traffic routing.  Traffic with no cookie is assigned
# a session cookie of wl-site-ver=1 or 2, to pin that session to either v1 or v2
# of the whitelabel, which are served by nginx-cache-v2 posts 8080 or 8082 respectively.
# Note: the use of post: 8080 in the match criteria was required for this service to work.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: v1-v2-svc-shift
  namespace: default
spec:
  hosts:
    - "podinfo.localhost.com"
    - "*.podinfo.localhost.com"
  gateways:
    - mesh
  http:
    - name: "v1-route"
      match:
        - headers:
            cookie:
              regex: ^(.*;.?|)(my-site-version=1)(;.*|)$
          port: 9898
      route:
        - destination:
            host: podinfo-v1.default.svc.cluster.local
            port:
              number: 9898
    - name: "v2-route"
      match:
        - headers:
            cookie:
              regex: ^(.*;.?|)(my-site-version=2)(;.*|)$
          port: 9898
      route:
        - destination:
            host: podinfo-v2.default.svc.cluster.local
            port:
              number: 9898
    - name: "default-split-v1-v2-routing"
      match:
        - port: 9898
      route:
        - destination:
            host: podinfo-v1.default.svc.cluster.local
            port:
              number: 9898
          headers:
            response:
              add:
                set-cookie: "my-site-version=1; HttpOnly; Path=/"
          weight: 50
        - destination:
            host: podinfo-v2.default.svc.cluster.local
            port:
              number: 9898
          headers:
            response:
              add:
                set-cookie: "my-site-version=2; HttpOnly; Path=/"
          weight: 50
